# childs_speech_recog_chall

./: .flake8  .gitignore  .runpod.env.example  README.md  colab_training.ipynb  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  verify_metrics.py
.github/: copilot-instructions.md
.github/agents/: EDA.agent.md  Implement.agent.md  ImplementContinue.agent.md  ImplementTask.agent.md  Plan.agent.md  Supervisor.agent.md  SystemDesign.agent.md  help.agent.md
.github/workflows/: test.yml
configs/: baseline_whisper_medium.yaml  baseline_whisper_small.yaml
docs/: CI-CD-SETUP.md  DrivenData Competition Rules (1).md  Problem Description.md  SystemDesign.md  runpod-training-automation.md
docs/baseline-pipeline/: baseline-scaffolding-context.md  baseline-scaffolding-plan.md  baseline-scaffolding-tasks.md
docs/runpod-training-automation/: runpod-automation-context.md  runpod-automation-plan.md  runpod-automation-tasks.md  runpod-usage-guide.md
docs/training-enhancements/: training-enhancements-context.md  training-enhancements-plan.md  training-enhancements-tasks.md
docs/whisper-small-migration/: whisper-small-migration-context.md  (+2 more)
notebooks/: eda.ipynb
scripts/: evaluate.py  pod_get_results.sh  pod_storage.py  pod_sync_data.sh  pod_tensorboard.sh  pod_terminate.sh  pod_train.sh  predict.py  prepare_submission.py  remote_train.sh  start_bore_server.sh  tensorboard_local.sh  train.py
src/: __init__.py
tests/: test_callbacks.py  test_data.py  test_inference.py  test_integration.py  test_metrics.py  test_models.py  test_pod_storage.py
(+14 files in other folders)
